Added new contributors/developers and added their @sf.net emails.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@13 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/docs/Authors.txt
+++ b/server/docs/Authors.txt
@@ -2,12 +2,15 @@ $Id$
 
 SEGS Developers
 =================
-nemerle    (?)
-malign     (malign@necrotic.net)
-SilverJohn (?)
+nemerle    (nemerle@users.sourceforge.net)
+malign     (malign@users.sourceforge.net)
+Patrick    (patrick_guerra@users.sourceforge.net)
 
 SEGS Contributors
 ===================
 Darawk     (darawk@darawk.com)
 rz950      (?)
 Catvir     (?)
+SilverJohn (?)
+Fork       (catnipjunkie@users.sourceforge.net)
+gustav     (bjordal@users.sourceforge.net)
