Moved SEGS documentation to top level docs directory from Projects/ subdir so our license and such is at the root.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@86 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/docs/Install.txt
+++ b/docs/Install.txt
@@ -1,7 +1,7 @@
 $Id$
 
 These instructions are for building SEGS from source. If you are using pre-built binaries,
-you can skip below to the configuration section.
+you can skip below and go to the configuration section.
 
 * SEGS pre-requisites...
 
