--- a/docs/Install.txt
+++ b/docs/Install.txt
@@ -57,9 +57,15 @@ TortoiseSVN is a GUI client that can be obtained here: http://tortoisesvn.tigris
 Subversion can be obtained here: http://subversion.tigris.org/
 
 Once you have obtained the source, traverse to the top-level directory and issue:
-
-user@bleh% ccmake .
-
+--- *nix ---
+user@bleh% mkdir build
+user@bleh% cd build
+user@bleh% ccmake ..
+--- windows -----
+user@bleh% mkdir build
+user@bleh% cd build
+user@bleh% ccmake-gui ..
+--------
 This will bring up a graphical interface where you must define your paths to the required
 software defined above.
 
@@ -69,10 +75,14 @@ If there are errors, ensure the paths to the headers and libraries are correct a
 cmake should have generated a makefile tailored for your system.
 Exit out of the cmake interface by typing the 'Q' key.
 
+---- *nix ----
 You should now be able to use the generated makefile to compile and link SEGS.
 
 user@bleh% make
 ...
+---- Windwos
+depending on chosen build system, the build directory will contain sln/makefiles
+---------
 
 If all goes well, you will have working SEGS binary(s).
 (authserver only at this stage in development)
@@ -82,6 +92,13 @@ If all goes well, you will have working SEGS binary(s).
 You must import the database schemas into your PostGreSQL database server before SEGS
 will function properly. First, you'll need to create a new database on the server named "segs".
 Also, create the SEGS user and grant it access to the "segs" database you just created.
+
+-- Example sql scripts can be found in:
+	Projects/CoX/Data -> database/user creation scripts
+	Projects/CoX/Servers/AdminServer/sql -> administration/account database tables
+	Projects/CoX/Servers/GameServer/sql -> character storage database tables
+-------------------
+	
 Next, we'll need to import the segs.sql file into our new database we just created. This sql
 file can be found under the AdminServer/sql directory:
 
