Dedication to Suiv
git-svn-id: svn://svn.code.sf.net/p/segs/code2@289 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/docs/Authors.txt
+++ b/docs/Authors.txt
@@ -15,4 +15,4 @@ gustav         (bjordal AT users.sourceforge.net)
 rz950          (?)
 SilverJohn     (?)
 StarkRavingMad ()
-Suiv           ()
+Suiv           () R.I.P. - Your dark humor will be missed.
