Removed extraneous SEE ALSO references [skip ci]

--- a/docs/man/AuthExerciser.1
+++ b/docs/man/AuthExerciser.1
@@ -42,7 +42,7 @@ TCP port (typically 2106)
 Communicate with server this amount of times
 .RE
 .SH SEE ALSO
-authserver(1), dbtool(1), piggtool(1)
+authserver(1)
 .SH BUGS
 Please report any findings to https://github.com/Segs/Segs/issues
 .SH AUTHORS
