Update DESCRIPTION [skip ci]

--- a/docs/man/piggtool.1
+++ b/docs/man/piggtool.1
@@ -13,7 +13,7 @@ piggtool
 .I <pigg_file>
 .I [target_dir]
 .SH DESCRIPTION
-The piggtool can display the contents of pigg archives and can also extract contained files. Some of these extracted
+The piggtool utility is able to display the contents of pigg archives and can also extract contained files. Some of these extracted
 files can be read by the
 .B authserver(1)
 program.
